--- a/css/style.css
+++ b/css/style.css
@@ -218,9 +218,13 @@ img {
     color: #6a4d38; }
   .news__link:hover ~ .news__date {
     background-color: #826550; }
+  .news__link:hover ~ .news__date::before {
+    border-top-color: #826550; }
   .news__link:active ~ .news__date {
     background-color: #6a4d38;
     color: #a09187; }
+  .news__link:active ~ .news__date::before {
+    border-top-color: #6a4d38; }
 
 .news__date {
   position: absolute;
@@ -244,7 +248,8 @@ img {
     height: 0;
     border-left: 25px solid transparent;
     border-right: 25px solid transparent;
-    border-top: 11px solid #000; }
+    border-top: 11px solid #000;
+    transition: 0.5s; }
   .news__date b {
     font-size: 30px;
     line-height: 30px;
