--- a/css/style.css
+++ b/css/style.css
@@ -393,8 +393,8 @@ img {
   position: fixed;
   top: 135px;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  -webkit-transform: translateX(-50%) translateY(-200%);
+          transform: translateX(-50%) translateY(-200%);
   box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.75);
   z-index: 20; }
   .modal-login h2 {
@@ -527,6 +527,80 @@ img {
 
 .modal-login__text-hidden {
   display: none; }
+
+@-webkit-keyframes bounce {
+  0% {
+    -webkit-transform: translateX(-50%) translateY(-250%);
+            transform: translateX(-50%) translateY(-250%); }
+  100% {
+    -webkit-transform: translateX(-50%) translateY(0);
+            transform: translateX(-50%) translateY(0); } }
+
+@keyframes bounce {
+  0% {
+    -webkit-transform: translateX(-50%) translateY(-250%);
+            transform: translateX(-50%) translateY(-250%); }
+  100% {
+    -webkit-transform: translateX(-50%) translateY(0);
+            transform: translateX(-50%) translateY(0); } }
+
+.modal-login--show {
+  -webkit-animation: bounce 0.6s;
+          animation: bounce 0.6s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards; }
+
+@-webkit-keyframes bounce-return {
+  0% {
+    -webkit-transform: translateX(-50%) translateY(0);
+            transform: translateX(-50%) translateY(0); }
+  100% {
+    -webkit-transform: translateX(-50%) translateY(-250%);
+            transform: translateX(-50%) translateY(-250%); } }
+
+@keyframes bounce-return {
+  0% {
+    -webkit-transform: translateX(-50%) translateY(0);
+            transform: translateX(-50%) translateY(0); }
+  100% {
+    -webkit-transform: translateX(-50%) translateY(-250%);
+            transform: translateX(-50%) translateY(-250%); } }
+
+.modal-login--hide {
+  -webkit-animation: bounce-return 0.6s;
+          animation: bounce-return 0.6s; }
+
+@-webkit-keyframes shake {
+  0% 100% {
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%); }
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translateX(-55%);
+            transform: translateX(-55%); }
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translateX(-45%);
+            transform: translateX(-45%); } }
+
+@keyframes shake {
+  0% 100% {
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%); }
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translateX(-55%);
+            transform: translateX(-55%); }
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translateX(-45%);
+            transform: translateX(-45%); } }
+
+.modal-login--error {
+  -webkit-animation: shake 0.6s;
+          animation: shake 0.6s;
+  -webkit-transform: translateX(-50%) translateY(0);
+          transform: translateX(-50%) translateY(0); }
+
+.modal-login--static {
+  -webkit-transform: translateX(-50%) translateY(0);
+          transform: translateX(-50%) translateY(0); }
 
 @media (min-width: 768px) {
   .page-header {
