--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,7 @@
 @import "global/base";
 @import "global/btn";
 @import "global/slider";
+@import "global/form";
 
 @import "blocks/page-header";
 @import "blocks/main-nav";
@@ -14,3 +15,7 @@
 @import "blocks/page-footer";
 @import "blocks/social-links";
 @import "blocks/modal-login";
+@import "blocks/inner-page";
+@import "blocks/entry";
+
+@import "blocks/modal";
