--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -117,6 +117,8 @@
     margin-top: 35px;
     display: flex;
     justify-content: space-between;
+    border-top: 1px solid #e5ddd5;
+    border-bottom: 1px solid #e5ddd5;
   }
 
   .reviews__item {
@@ -125,8 +127,8 @@
     min-height: 160px;
     padding: 35px;
     padding-left: 140px;
-    border-top: 1px solid #e5ddd5;
-    border-bottom: 1px solid #e5ddd5;
+    // border-top: 1px solid #e5ddd5;
+    // border-bottom: 1px solid #e5ddd5;
   }
 
   .reviews__author-foto {
@@ -149,6 +151,8 @@
     text-align: center;
     width: 50px;
     border: 1px solid #e5ddd5;
+    border-top: none;
+    border-bottom: none;
     background-color: #f8f5f2;
     cursor: pointer;
     transition: 0.5s;
@@ -215,11 +219,14 @@
 
   .reviews__items {
     margin-bottom: 42px;
+    border: none;
   }
 
   .reviews__item {
     padding-left: 317px;
     margin: 0 20px;
+    border-top: 1px solid #e5ddd5;
+    border-bottom: 1px solid #e5ddd5;
     border-right: 1px solid #e5ddd5;
   }
 
@@ -232,6 +239,11 @@
         border-radius: 0;
         border-right: 1px solid #e5ddd5;
       }
+  }
+
+  .reviews__btn {
+    border-top: 1px solid #e5ddd5;
+    border-bottom: 1px solid #e5ddd5;
   }
 
   .reviews__toggles {
