--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,8 +14,11 @@
 @import "blocks/reviews";
 @import "blocks/page-footer";
 @import "blocks/social-links";
-@import "blocks/modal-login";
 @import "blocks/inner-page";
 @import "blocks/entry";
+@import "blocks/work";
+@import "blocks/catalog";
+@import "blocks/price";
 
+@import "blocks/modal-login";
 @import "blocks/modal";
